# rmcp

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
crates/rmcp/: Cargo.toml  README.md
crates/rmcp-macros/: Cargo.toml
crates/rmcp-macros/src/: lib.rs  tool.rs
crates/rmcp-macros/tests/: .rs
crates/rmcp/src/: handler.rs  lib.rs  model.rs  service.rs  transport.rs
crates/rmcp/src/handler/: client.rs  server.rs  tower.rs
crates/rmcp/src/handler/server/: tool.rs  tool_v1.rs  tool_v2.rs
crates/rmcp/src/model/: annotaded.rs  content.rs  prompt.rs  resource.rs  tool.rs
crates/rmcp/src/service/: client.rs  server.rs  tower.rs
crates/rmcp/src/transport/: child_process.rs  io.rs  sse.rs  sse_server.rs  tower.rs
crates/rmcp/src/transport/io/: wasip1.rs
crates/rmcp/tests/: test_tool_macros.rs  test_with_js.rs  test_with_python.rs
crates/rmcp/tests/common/: calculator.rs
crates/rmcp/tests/test_with_python/: pyproject.toml  server.py
crates/rmcp/tests/test_with_ts/: index.js  package-lock.json
docs/readme/: README.zh-cn.md
examples/: README.md
examples/clients/: Cargo.toml
examples/clients/src/: collection.rs  everything_stdio.rs  official_sdk_adaptor.rs  sse.rs  std_io.rs
examples/clients/src/common/: simple_client.rs
examples/rig-integration/src/: config.rs
examples/rig-integration/src/config/: mcp.rs
examples/servers/: Cargo.toml
examples/servers/src/: axum.rs  std_io.rs
examples/servers/src/common/: calculator.rs  counter.rs  mod.rs
examples/transport/: Cargo.toml
examples/transport/src/: tcp.rs  unix_socket.rs
examples/transport/src/common/: caculater.rs  calculator.rs  mod.rs
examples/wasip1/: Cargo.toml  README.md
examples/wasip1/src/: main.rs
examples/wasip1/src/common/: counter.rs
