[workspace]
members = [
    "crates/rmcp",
    "examples/*",
]
resolver = "2"

[workspace.dependencies]
rmcp = { path = "./crates/rmcp" }

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["4t145 <u4t145@163.com>"]
license = "Apache License 2.0"
repository = "https://github.com/4t145/rmcp/"
description = "Rust SDK for the Model Context Protocol"
