[workspace]
members = [
    "crates/rmcp", 
    "crates/rmcp-macros",
    "examples/*",
]
resolver = "2"

[workspace.dependencies]
rmcp = { path = "./crates/rmcp" }
rmcp-macros = { path = "./crates/rmcp-macros" }

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["4t145 <u4t145@163.com>"]
license = "Apache License 2.0"
repository = "https://github.com/4t145/rmcp/"
description = "Rust SDK for the Model Context Protocol"
