[package]
name = "rmcp"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Rust SDK for Model Context Protocol"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1", features = ["sync", "macros", "rt"] }
futures = "0.3"
tracing = { version = "0.1" }
tokio-util = { version = "0.7" }
pin-project-lite = "0.2"

# for auto generate schema
schemars = { version = "0.8", optional = true }

# for image encoding
base64 = {version = "0.21", optional = true }

# for SSE client
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
], optional = true  }
eventsource-client = { version = "0.14.0", optional = true }


rmcp-macros = { version = "0.1", workspace = true }
# for WASI
# [target.'cfg(target_arch="wasip2")'.dependencies]
wasi = "0.11.0+wasi-snapshot-preview1"


[features]
default = ["default-json-schema", "base64"]
client = []
server = ["transport-io"]

transport-sse = ["dep:reqwest", "dep:eventsource-client"]
transport-io = ["tokio/io-util", "tokio-util/codec"]
transport-child-process = ["transport-io"]
default-json-schema = ["dep:schemars"]

[dev-dependencies]
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt"] }
schemars = { version = "0.8" }

anyhow = "1.0"

[build]
target = ["x86_64-unknown-linux-gnu", "i686-unknown-linux-gnu", "wasm32-wasip1"]

[[tests]]
name = "test_tool_macros"
required-features = ["server"]
path = "tests/test_tool_macros.rs"
