[package]
name = "mcp-client-examples"
version = "0.1.1"
edition = "2024"
publish = false

[dependencies]
rmcp= { path = "../../crates/rmcp", features = ["client", "transport-sse", "transport-child-process"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
futures = "0.3"
anyhow = "1.0"

[[example]]
name = "sse"
path = "src/sse.rs"

[[example]]
name = "std_io"
path = "src/std_io.rs"