[package]
name = "mcp-client-examples"
version = "0.1.3"
edition = "2024"
publish = false

[dependencies]
rmcp = { path = "../../crates/rmcp", features = [
    "client",
    "transport-sse",
    "transport-child-process",
    "tower"
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
futures = "0.3"
anyhow = "1.0"
mcp-client = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main" }
mcp-core = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main" }
tower = "0.5"
[[example]]
name = "official_sdk_adaptor"
path = "src/official_sdk_adaptor.rs"

[[example]]
name = "sse"
path = "src/sse.rs"

[[example]]
name = "std_io"
path = "src/std_io.rs"

[[example]]
name = "collection"
path = "src/collection.rs"
